# SENTRY-OBSERVABILITY

./: .gitignore  LICENSE  README.md  pyproject.toml
sentry_observability/: __init__.py  azure.py  core.py
tests/: test_core.py
