[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sentry-observability"
version = "0.2.0"
description = "Utilidades para simplificar la instrumentación de Sentry en proyectos"
readme = "README.md"
authors = [{name = "Alexis Medina", email = "alexis.medina@nubiral.com"}]
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "sentry-sdk==2.34.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
]
azure = [
    "azure-functions>=1.20",
    "pydantic>=1.10",
    "SQLAlchemy>=1.4",
]

[project.urls]
Homepage = "https://github.com/Nubiral-EMU/NU00021-SENTRY-OBSERVABILITY"
Repository = "https://github.com/Nubiral-EMU/NU00021-SENTRY-OBSERVABILITY"
Issues = "https://github.com/Nubiral-EMU/NU00021-SENTRY-OBSERVABILITY/issues"

[tool.setuptools]
packages = ["sentry_observability"]
include-package-data = true

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
